[project]
name = "cycler"
dynamic = ["version"]
description = "Composable style cycles"
authors = [
    {name = "Thomas A Caswell", email = "matplotlib-users@python.org"},
]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["cycle kwargs"]

[project.urls]
homepage = "https://matplotlib.org/cycler/"
repository = "https://github.com/matplotlib/cycler"

[project.optional-dependencies]
docs = [
    "ipython",
    "matplotlib",
    "numpydoc",
    "sphinx",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools]
packages = ["cycler"]

[tool.setuptools.dynamic]
version = {attr = "cycler.__version__"}

[tool.setuptools.package-data]
cycler = ["py.typed"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
